--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "ng test"
   },
   "private": true,
+  "homepage": "https://codes-dev.github.io/kodez-converter",
   "dependencies": {
     "@angular/animations": "^14.0.0",
     "@angular/cdk": "^14.2.3",
@@ -33,6 +34,7 @@
     "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
+    "angular-cli-ghpages": "^1.0.3",
     "autoprefixer": "^10.4.12",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
