edited render.yaml 3

--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,6 @@ services:
     name: kodez-converter
     env: static-sites
     buildCommand: "ng build"
+    rootDirectory: "src"
+    publishDirectory: "build"
     plan: free # optional (defaults to starter)
